--- a/movies.html
+++ b/movies.html
@@ -1,168 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Movie Voting</title>
-  <script src="/socket.io/socket.io.js"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background: #f0f2f5;
-    }
-    h2 {
-      margin-top: 20px;
-    }
-    .movie-grid {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-      margin-top: 20px;
-    }
-    .movie {
-      background: #fff;
-      padding: 10px;
-      border-radius: 10px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-      width: 160px;
-      position: relative;
-    }
-    .movie img {
-      width: 100%;
-      height: auto;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-    .vote-count {
-      margin-top: 5px;
-    }
-    #upload-section {
-      margin-top: 30px;
-    }
-    input[type="text"] {
-      padding: 8px;
-      width: 300px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    button {
-      padding: 8px 12px;
-      margin-left: 5px;
-      border: none;
-      background-color: #007bff;
-      color: white;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .delete-btn {
-      margin-top: 5px;
-      background-color: #dc3545;
-    }
-  </style>
 </head>
 <body>
-  <h2>🎬 Movie Voting Page</h2>
+  <input id="movieUrl" placeholder="Image URL" />
+  <button onclick="addMovie()">Upload Movie</button>
+  <div id="moviesContainer"></div>
 
-  <div id="upload-section">
-    <input type="text" id="imageUrl" placeholder="Enter image URL..." />
-    <button onclick="uploadMovie()">Upload</button>
-    <button id="resultBtn">Show Top Voted Movie</button>
-  </div>
-
-  <div class="movie-grid"></div>
-
+  <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    const movieVotes = {};
 
-    function renderMovies(movies) {
-      const grid = document.querySelector('.movie-grid');
-      grid.innerHTML = '';
+    function addMovie() {
+      const imageUrl = document.getElementById('movieUrl').value;
+      socket.emit('movie:add', imageUrl);
+      document.getElementById('movieUrl').value = '';
+    }
 
+    function voteMovie(id) {
+      socket.emit('movie:vote', id);
+    }
+
+    function deleteMovie(id) {
+      socket.emit('movie:delete', id);
+    }
+
+    socket.emit('movie:getVotes');
+
+    socket.on('movie:updateVotes', function(movies) {
+      const container = document.getElementById('moviesContainer');
+      container.innerHTML = '';
       movies.forEach(movie => {
         const div = document.createElement('div');
-        div.className = 'movie';
-        div.setAttribute('data-id', movie.id);
-
         div.innerHTML = `
-          <img src="${movie.image}" alt="Movie Image" />
-          <div class="vote-count">Votes: ${movie.votes}</div>
-          ${movie.uploaded ? `<button class="delete-btn">🗑️ Delete</button>` : ''}
+          <img src="${movie.image}" width="100" /><br />
+          Votes: ${movie.votes} <br />
+          <button onclick="voteMovie('${movie.id}')">Vote</button>
+          ${movie.uploaded ? `<button onclick="deleteMovie('${movie.id}')">Delete</button>` : ''}
         `;
-
-        div.querySelector('img').addEventListener('click', () => {
-          socket.emit('voteMovie', movie.id);
-        });
-
-        const deleteBtn = div.querySelector('.delete-btn');
-        if (deleteBtn) {
-          deleteBtn.addEventListener('click', () => {
-            socket.emit('deleteMovie', movie.id);
-          });
-        }
-
-        grid.appendChild(div);
+        container.appendChild(div);
       });
-    }
-
-    socket.emit('getVotes');
-
-    socket.on('updateVotes', (movieList) => {
-      movieList.forEach(m => (movieVotes[m.id] = m.votes));
-      renderMovies(movieList);
     });
-
-    document.getElementById('resultBtn').addEventListener('click', () => {
-      const topMovie = Object.entries(movieVotes).reduce((acc, [id, votes]) => {
-        if (!acc || votes > acc.votes) return { id, votes };
-        return acc;
-      }, null);
-
-      if (!topMovie || topMovie.votes === 0) {
-        alert("No votes yet!");
-        return;
-      }
-
-      // Get movie object from DOM using ID
-      const movie = Array.from(document.querySelectorAll('.movie')).find(m => m.dataset.id === topMovie.id);
-      const imageUrl = movie.querySelector('img').src;
-
-      const win = window.open('', '_blank', 'width=400,height=500');
-      win.document.write(`
-        <html>
-          <head>
-            <title>Top Voted Movie</title>
-            <style>
-              body {
-                font-family: Arial;
-                text-align: center;
-                padding: 20px;
-              }
-              img {
-                max-width: 100%;
-                border-radius: 10px;
-                margin-bottom: 10px;
-              }
-            </style>
-          </head>
-          <body>
-            <h2>🎉 Top Voted Movie</h2>
-            <img src="${imageUrl}" />
-            <p><strong>Votes:</strong> ${topMovie.votes}</p>
-          </body>
-        </html>
-      `);
-    });
-
-    function uploadMovie() {
-      const imageUrl = document.getElementById('imageUrl').value;
-      if (imageUrl) {
-        socket.emit('addMovie', imageUrl);
-        document.getElementById('imageUrl').value = '';
-      }
-    }
   </script>
 </body>
 </html>
