--- a/movies.html
+++ b/movies.html
@@ -1,46 +1,115 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Movie Voting</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Chat Room</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f5f7fa;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
+      padding: 20px;
+      min-height: 100vh;
+    }
+    #container {
+      background: white;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      border-radius: 10px;
+      max-width: 500px;
+      width: 100%;
+      padding: 20px;
+    }
+    input, button {
+      padding: 10px;
+      margin: 8px 0;
+      width: 100%;
+      box-sizing: border-box;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+    }
+    button {
+      background: #128c7e;
+      color: white;
+      border: none;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+    }
+    button:hover {
+      background: #075e54;
+    }
+    #messages {
+      border: 1px solid #ddd;
+      height: 300px;
+      overflow-y: auto;
+      padding: 10px;
+      margin-top: 10px;
+      border-radius: 5px;
+      background: #fafafa;
+      list-style-type: none;
+    }
+    #messages li {
+      padding: 8px;
+      margin-bottom: 6px;
+      border-radius: 8px;
+      background: #e1f0ea;
+      max-width: 80%;
+      word-wrap: break-word;
+    }
+  </style>
 </head>
 <body>
-  <input id="movieUrl" placeholder="Image URL" />
-  <button onclick="addMovie()">Upload Movie</button>
-  <div id="moviesContainer"></div>
+  <div id="container">
+    <input id="username" placeholder="Your name" />
+    <input id="roomId" placeholder="Room ID" />
+    <button onclick="joinRoom()">Join Room</button>
+
+    <ul id="messages"></ul>
+
+    <form id="messageForm">
+      <input id="messageInput" autocomplete="off" placeholder="Type a message..." />
+      <button type="submit">Send</button>
+    </form>
+  </div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
 
-    function addMovie() {
-      const imageUrl = document.getElementById('movieUrl').value;
-      socket.emit('movie:add', imageUrl);
-      document.getElementById('movieUrl').value = '';
+    function joinRoom() {
+      const username = document.getElementById('username').value.trim();
+      const roomId = document.getElementById('roomId').value.trim();
+      if (!username || !roomId) {
+        alert("Please enter your name and room ID");
+        return;
+      }
+      socket.emit('chat:joinRoom', { username, roomId });
     }
 
-    function voteMovie(id) {
-      socket.emit('movie:vote', id);
-    }
+    const form = document.getElementById('messageForm');
+    const input = document.getElementById('messageInput');
+    const messages = document.getElementById('messages');
 
-    function deleteMovie(id) {
-      socket.emit('movie:delete', id);
-    }
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+      const message = input.value.trim();
+      const roomId = document.getElementById('roomId').value.trim();
+      if (message && roomId) {
+        socket.emit('chat:message', { roomId, message });
+        input.value = '';
+      }
+    });
 
-    socket.emit('movie:getVotes');
-
-    socket.on('movie:updateVotes', function(movies) {
-      const container = document.getElementById('moviesContainer');
-      container.innerHTML = '';
-      movies.forEach(movie => {
-        const div = document.createElement('div');
-        div.innerHTML = `
-          <img src="${movie.image}" width="100" /><br />
-          Votes: ${movie.votes} <br />
-          <button onclick="voteMovie('${movie.id}')">Vote</button>
-          ${movie.uploaded ? `<button onclick="deleteMovie('${movie.id}')">Delete</button>` : ''}
-        `;
-        container.appendChild(div);
-      });
+    socket.on('chat:message', function(msg) {
+      const item = document.createElement('li');
+      item.textContent = msg;
+      messages.appendChild(item);
+      messages.scrollTop = messages.scrollHeight;
     });
   </script>
 </body>
