--- a/movies.html
+++ b/movies.html
@@ -3,113 +3,156 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Chat Room</title>
+  <title>Movie Voting</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: #f5f7fa;
+      margin: 0;
+      padding: 20px;
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin: 0;
-      padding: 20px;
       min-height: 100vh;
     }
     #container {
       background: white;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      border-radius: 10px;
-      max-width: 500px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      border-radius: 12px;
+      max-width: 700px;
       width: 100%;
       padding: 20px;
     }
-    input, button {
+    h1 {
+      text-align: center;
+      color: #128c7e;
+      margin-bottom: 20px;
+    }
+    #uploadSection {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+    #imageUrl {
+      flex-grow: 1;
       padding: 10px;
-      margin: 8px 0;
-      width: 100%;
-      box-sizing: border-box;
-      border-radius: 5px;
-      border: 1px solid #ccc;
       font-size: 1rem;
+      border-radius: 6px;
+      border: 1px solid #ccc;
     }
     button {
-      background: #128c7e;
+      padding: 10px 18px;
+      background-color: #128c7e;
       color: white;
-      border: none;
-      cursor: pointer;
       font-weight: bold;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
       transition: background-color 0.3s ease;
+      font-size: 1rem;
     }
     button:hover {
-      background: #075e54;
+      background-color: #075e54;
     }
-    #messages {
-      border: 1px solid #ddd;
-      height: 300px;
-      overflow-y: auto;
-      padding: 10px;
-      margin-top: 10px;
-      border-radius: 5px;
+    #moviesContainer {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+      gap: 15px;
+    }
+    .movie {
       background: #fafafa;
-      list-style-type: none;
-    }
-    #messages li {
-      padding: 8px;
-      margin-bottom: 6px;
-      border-radius: 8px;
-      background: #e1f0ea;
-      max-width: 80%;
+      padding: 10px;
+      border-radius: 10px;
+      box-shadow: 0 1px 6px rgba(0,0,0,0.1);
+      text-align: center;
       word-wrap: break-word;
+      position: relative;
+    }
+    .movie img {
+      max-width: 100%;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-bottom: 8px;
+    }
+    .voteCount {
+      font-weight: bold;
+      margin-bottom: 8px;
+    }
+    .deleteBtn {
+      background-color: #dc3545;
+      border: none;
+      color: white;
+      padding: 6px 12px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 0.9rem;
+      position: absolute;
+      top: 8px;
+      right: 8px;
+    }
+    .deleteBtn:hover {
+      background-color: #a71d2a;
+    }
+    .voteBtn {
+      background-color: #128c7e;
+      border: none;
+      color: white;
+      padding: 6px 12px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 0.9rem;
+    }
+    .voteBtn:hover {
+      background-color: #075e54;
     }
   </style>
 </head>
 <body>
   <div id="container">
-    <input id="username" placeholder="Your name" />
-    <input id="roomId" placeholder="Room ID" />
-    <button onclick="joinRoom()">Join Room</button>
+    <h1>Movie Voting</h1>
+    <div id="uploadSection">
+      <input type="text" id="imageUrl" placeholder="Paste image URL here" />
+      <button onclick="addMovie()">Upload</button>
+    </div>
 
-    <ul id="messages"></ul>
-
-    <form id="messageForm">
-      <input id="messageInput" autocomplete="off" placeholder="Type a message..." />
-      <button type="submit">Send</button>
-    </form>
+    <div id="moviesContainer"></div>
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
 
-    function joinRoom() {
-      const username = document.getElementById('username').value.trim();
-      const roomId = document.getElementById('roomId').value.trim();
-      if (!username || !roomId) {
-        alert("Please enter your name and room ID");
-        return;
-      }
-      socket.emit('chat:joinRoom', { username, roomId });
+    function addMovie() {
+      const imageUrl = document.getElementById('imageUrl').value.trim();
+      if (!imageUrl) return alert('Please enter an image URL');
+      socket.emit('movie:add', imageUrl);
+      document.getElementById('imageUrl').value = '';
     }
 
-    const form = document.getElementById('messageForm');
-    const input = document.getElementById('messageInput');
-    const messages = document.getElementById('messages');
+    function voteMovie(id) {
+      socket.emit('movie:vote', id);
+    }
 
-    form.addEventListener('submit', function(e) {
-      e.preventDefault();
-      const message = input.value.trim();
-      const roomId = document.getElementById('roomId').value.trim();
-      if (message && roomId) {
-        socket.emit('chat:message', { roomId, message });
-        input.value = '';
-      }
-    });
+    function deleteMovie(id) {
+      socket.emit('movie:delete', id);
+    }
 
-    socket.on('chat:message', function(msg) {
-      const item = document.createElement('li');
-      item.textContent = msg;
-      messages.appendChild(item);
-      messages.scrollTop = messages.scrollHeight;
+    socket.emit('movie:getVotes');
+
+    socket.on('movie:updateVotes', (movies) => {
+      const container = document.getElementById('moviesContainer');
+      container.innerHTML = '';
+      movies.forEach(movie => {
+        const div = document.createElement('div');
+        div.className = 'movie';
+        div.innerHTML = `
+          <img src="${movie.image}" alt="Movie Image" />
+          <div class="voteCount">Votes: ${movie.votes}</div>
+          <button class="voteBtn" onclick="voteMovie('${movie.id}')">Vote</button>
+          ${movie.uploaded ? `<button class="deleteBtn" onclick="deleteMovie('${movie.id}')">Delete</button>` : ''}
+        `;
+        container.appendChild(div);
+      });
     });
   </script>
 </body>
