--- a/comment.html
+++ b/comment.html
@@ -91,6 +91,7 @@
       const item = document.createElement('li');
       item.textContent = `${comment.text}`;
       commentList.prepend(item);
+      console.log(commentList)
     }
 
     function sendComment() {
