--- a/index.html
+++ b/index.html
@@ -1,27 +1,173 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Chat</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Modern Chat</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #1f4037, #99f2c8);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    .chat-container {
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(15px);
+      width: 100%;
+      max-width: 500px;
+      border-radius: 16px;
+      box-shadow: 0 8px 32px rgba(0,0,0,0.3);
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .chat-header {
+      padding: 20px;
+      background-color: rgba(0, 0, 0, 0.2);
+      color: white;
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+
+    .join-room {
+      display: flex;
+      gap: 10px;
+      padding: 15px;
+      background-color: rgba(255, 255, 255, 0.15);
+    }
+
+    .join-room input, .join-room button {
+      padding: 10px;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+    }
+
+    .join-room input {
+      flex: 1;
+    }
+
+    .join-room button {
+      background-color: #0f9d58;
+      color: white;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    #messages {
+      flex: 1;
+      list-style: none;
+      padding: 20px;
+      margin: 0;
+      overflow-y: auto;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .message {
+      max-width: 75%;
+      padding: 12px 16px;
+      border-radius: 18px;
+      background-color: rgba(255, 255, 255, 0.8);
+      color: #333;
+      align-self: flex-start;
+      word-wrap: break-word;
+    }
+
+    .message.self {
+      align-self: flex-end;
+      background-color: #0f9d58;
+      color: white;
+    }
+
+    form {
+      display: flex;
+      padding: 15px;
+      background-color: rgba(255, 255, 255, 0.15);
+      gap: 10px;
+    }
+
+    form input {
+      flex: 1;
+      padding: 10px;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+    }
+
+    form button {
+      background-color: #0f9d58;
+      color: white;
+      border: none;
+      padding: 10px 16px;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    form button:hover, .join-room button:hover {
+      background-color: #0c7c45;
+    }
+
+    @media (max-width: 600px) {
+      .join-room {
+        flex-direction: column;
+      }
+
+      form {
+        flex-direction: column;
+      }
+
+      form button {
+        width: 100%;
+      }
+    }
+  </style>
 </head>
 <body>
-  <input id="username" placeholder="Your name" />
-  <input id="roomId" placeholder="Room ID" />
-  <button onclick="joinRoom()">Join Room</button>
+  <div class="chat-container">
+    <div class="chat-header">💬 Modern Chat Room</div>
 
-  <ul id="messages"></ul>
-  <form id="messageForm">
-    <input id="messageInput" autocomplete="off" placeholder="Type a message..." />
-    <button>Send</button>
-  </form>
+    <div class="join-room">
+      <input id="username" placeholder="Your name" />
+      <input id="roomId" placeholder="Room ID" />
+      <button onclick="joinRoom()">Join</button>
+    </div>
+
+    <ul id="messages"></ul>
+
+    <form id="messageForm">
+      <input id="messageInput" autocomplete="off" placeholder="Type a message..." />
+      <button>Send</button>
+    </form>
+  </div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
 
+    let currentUsername = '';
+
     function joinRoom() {
-      const username = document.getElementById('username').value;
-      const roomId = document.getElementById('roomId').value;
-      socket.emit('chat:joinRoom', { username, roomId });
+      const username = document.getElementById('username').value.trim();
+      const roomId = document.getElementById('roomId').value.trim();
+      if (username && roomId) {
+        currentUsername = username;
+        socket.emit('chat:joinRoom', { username, roomId });
+      }
     }
 
     const form = document.getElementById('messageForm');
@@ -30,17 +176,28 @@
 
     form.addEventListener('submit', function(e) {
       e.preventDefault();
-      const message = input.value;
-      const roomId = document.getElementById('roomId').value;
-      socket.emit('chat:message', { roomId, message });
-      input.value = '';
+      const message = input.value.trim();
+      const roomId = document.getElementById('roomId').value.trim();
+      if (message && roomId) {
+        socket.emit('chat:message', { roomId, message, username: currentUsername });
+        addMessageToUI(message, true);
+        input.value = '';
+      }
     });
 
-    socket.on('chat:message', function(msg) {
-      const item = document.createElement('li');
-      item.textContent = msg;
-      messages.appendChild(item);
+    socket.on('chat:message', function(data) {
+      if (data.username !== currentUsername) {
+        addMessageToUI(`${data.username}: ${data.message}`, false);
+      }
     });
+
+    function addMessageToUI(message, isSelf) {
+      const item = document.createElement('li');
+      item.textContent = message;
+      item.className = 'message' + (isSelf ? ' self' : '');
+      messages.appendChild(item);
+      messages.scrollTop = messages.scrollHeight;
+    }
   </script>
 </body>
 </html>
