--- a/index.html
+++ b/index.html
@@ -2,162 +2,111 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Modern Chat</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #1f4037, #99f2c8);
+      background-color: #f4f4f4;
+    }
+    nav {
+      background-color: #128c7e;
+      padding: 10px 20px;
+      color: white;
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
-      height: 100vh;
     }
-
+    nav h1 {
+      margin: 0;
+      font-size: 1.2rem;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin-left: 15px;
+      font-weight: bold;
+    }
     .container {
-      width: 100%;
-      max-width: 800px;
-      background: rgba(255, 255, 255, 0.1);
-      backdrop-filter: blur(15px);
-      border-radius: 16px;
-      box-shadow: 0 8px 32px rgba(0,0,0,0.3);
-      overflow: hidden;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .chat-header {
+      max-width: 600px;
+      margin: 30px auto;
       padding: 20px;
-      background-color: rgba(0, 0, 0, 0.2);
-      color: white;
-      text-align: center;
-      font-size: 1.5rem;
-      font-weight: bold;
-    }
-
-    .join-section {
-      padding: 30px;
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-
-    .join-section input {
-      padding: 12px;
+      background-color: white;
       border-radius: 10px;
-      border: none;
-      font-size: 1rem;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     }
-
-    .join-section button {
-      padding: 12px;
-      background-color: #0f9d58;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      font-size: 1rem;
-      font-weight: bold;
-      cursor: pointer;
+    #joinSection {
+      display: block;
     }
-
-    .join-section button:hover {
-      background-color: #0c7c45;
-    }
-
-    .chat-window {
+    #chatSection {
       display: none;
-      flex-direction: column;
-      height: 600px;
     }
-
+    input[type="text"] {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 1rem;
+    }
     #messages {
       list-style: none;
-      padding: 20px;
-      margin: 0;
+      padding: 0;
+      max-height: 300px;
       overflow-y: auto;
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
+      margin-bottom: 15px;
     }
-
-    .message {
-      max-width: 75%;
-      padding: 12px 16px;
-      border-radius: 18px;
-      background-color: rgba(255, 255, 255, 0.8);
-      color: #333;
-      align-self: flex-start;
-      word-wrap: break-word;
-    }
-
-    .message.self {
-      align-self: flex-end;
-      background-color: #0f9d58;
-      color: white;
-    }
-
-    form {
-      display: flex;
-      padding: 15px;
-      background-color: rgba(255, 255, 255, 0.15);
-      gap: 10px;
-    }
-
-    form input {
-      flex: 1;
+    #messages li {
+      background-color: #e0f2f1;
       padding: 10px;
-      border: none;
-      border-radius: 8px;
+      border-radius: 6px;
+      margin-bottom: 8px;
+    }
+    #messageForm {
+      display: flex;
+      gap: 10px;
+    }
+    #messageInput {
+      flex-grow: 1;
+      padding: 10px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
       font-size: 1rem;
     }
-
-    form button {
-      background-color: #0f9d58;
-      color: white;
+    button {
+      padding: 10px 20px;
       border: none;
-      padding: 10px 16px;
-      border-radius: 8px;
+      border-radius: 6px;
+      background-color: #128c7e;
+      color: white;
       font-weight: bold;
       cursor: pointer;
+      font-size: 1rem;
     }
-
-    form button:hover {
-      background-color: #0c7c45;
-    }
-
-    @media (max-width: 600px) {
-      .container {
-        border-radius: 0;
-      }
-
-      form {
-        flex-direction: column;
-      }
-
-      form button {
-        width: 100%;
-      }
+    button:hover {
+      background-color: #0f6b61;
     }
   </style>
 </head>
 <body>
+  <nav>
+    <h1>Chat App</h1>
+    <div>
+      <a href="/index.html">Chat</a>
+      <a href="/movies.html">Movies</a>
+      <a href="/comments.html">Comments</a>
+    </div>
+  </nav>
   <div class="container">
-    <div class="chat-header">💬 Modern Chat Room</div>
-
-    <div class="join-section" id="joinSection">
-      <input id="username" placeholder="Your name" />
-      <input id="roomId" placeholder="Room code" />
+    <div id="joinSection">
+      <input type="text" id="username" placeholder="Enter your name" />
+      <input type="text" id="roomId" placeholder="Enter Room ID" />
       <button onclick="joinRoom()">Join Room</button>
     </div>
 
-    <div class="chat-window" id="chatWindow">
+    <div id="chatSection">
       <ul id="messages"></ul>
       <form id="messageForm">
         <input id="messageInput" autocomplete="off" placeholder="Type a message..." />
@@ -169,57 +118,37 @@
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    let currentUsername = '';
-
-    const joinSection = document.getElementById('joinSection');
-    const chatWindow = document.getElementById('chatWindow');
-    const messages = document.getElementById('messages');
-    const messageForm = document.getElementById('messageForm');
-    const messageInput = document.getElementById('messageInput');
 
     function joinRoom() {
-      const usernameInput = document.getElementById('username').value.trim();
+      const username = document.getElementById('username').value.trim();
       const roomId = document.getElementById('roomId').value.trim();
+      if (!username || !roomId) return;
+      socket.emit('chat:joinRoom', { username, roomId });
 
-      if (!usernameInput || !roomId) {
-        alert('Please enter both name and room code.');
-        return;
-      }
-
-      currentUsername = usernameInput;
-      socket.emit('chat:joinRoom', { username: currentUsername, roomId });
-
-      joinSection.style.display = 'none';
-      chatWindow.style.display = 'flex';
+      document.getElementById('joinSection').style.display = 'none';
+      document.getElementById('chatSection').style.display = 'block';
     }
 
-    messageForm.addEventListener('submit', function(e) {
+    const form = document.getElementById('messageForm');
+    const input = document.getElementById('messageInput');
+    const messages = document.getElementById('messages');
+
+    form.addEventListener('submit', function (e) {
       e.preventDefault();
-      const message = messageInput.value.trim();
+      const message = input.value.trim();
       const roomId = document.getElementById('roomId').value.trim();
-
-      if (!message || !roomId || !currentUsername) return;
-
+      if (!message || !roomId) return;
       socket.emit('chat:message', { roomId, message });
-      addMessageToUI(message, true);
-      messageInput.value = '';
+      input.value = '';
     });
 
-    socket.on('chat:message', function(data) {
-      if (!data || !data.message || !data.username) return;
-
-      if (data.username !== currentUsername) {
-        addMessageToUI(`${data.username}: ${data.message}`, false);
-      }
-    });
-
-    function addMessageToUI(message, isSelf) {
+    socket.on('chat:message', function (msg) {
+      if (!msg) return;
       const item = document.createElement('li');
-      item.textContent = message;
-      item.className = 'message' + (isSelf ? ' self' : '');
+      item.textContent = msg;
       messages.appendChild(item);
       messages.scrollTop = messages.scrollHeight;
-    }
+    });
   </script>
 </body>
 </html>
