--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div>
       <a href="/index.html">Chat</a>
       <a href="/movies.html">Movies</a>
-      <a href="/comments.html">Comments</a>
+      <a href="/comment.html">Comments</a>
     </div>
   </nav>
   <div class="container">
