--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     socket.on('chat:message', function (msg) {
       if (!msg) return;
       const item = document.createElement('li');
-      console.log("message recived: "+msg)
+      console.log("message recived: "+msg.message)
       item.textContent = msg;
       messages.appendChild(item);
       messages.scrollTop = messages.scrollHeight;
